<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.view.LoginActivity">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userNameEditText"
            android:layout_marginTop="24dp"
            android:hint="@string/userNameHint"
            android:maxLength="6"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_alignStart="@+id/passwordEditText" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_marginTop="16dp"
            android:hint="@string/passwordHint"
            android:maxLength="6"
            android:layout_below="@+id/userNameEditText"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnConnect"
            android:id="@+id/btnConnect"
            android:layout_marginTop="32dp"
            android:layout_below="@+id/passwordEditText"
            android:layout_alignLeft="@+id/passwordEditText"
            android:layout_alignStart="@+id/passwordEditText"
            android:layout_alignRight="@+id/passwordEditText"
            android:layout_alignEnd="@+id/passwordEditText"
            android:background="@drawable/buttons_selector"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>



